--- a/DQMServices/Diagnostic/web-interface/index.html
+++ b/DQMServices/Diagnostic/web-interface/index.html
@@ -4,11 +4,15 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>HDQM Web Interface Home Page</title>
   <style type="text/css" title="currentStyle">
-    @import "/media/css/demo_page.css";
-    @import "/media/css/demo_table_jui.css";
-    @import "/media/themes/smoothness/jquery-ui-1.7.2.custom.css";
-    <!-- @import "/media/prettyPhoto/prettyPhoto/css/prettyPhoto.css"; -->
+    @import "/lxplusUser/lib/media/css/demo_page.css";
+    @import "/lxplusUser/lib/media/css/demo_table_jui.css";
   </style>
+  <style>
+    #dt_example{
+      padding: 20px;
+    }
+  </style>
+<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/smoothness/jquery-ui.css" type="text/css" />
 </head>
 <body id="dt_example">
   <h1 id="title">HDQM Web Interface</h1>
