--- a/DQMServices/Diagnostic/web-interface/WebInterface.html
+++ b/DQMServices/Diagnostic/web-interface/WebInterface.html
@@ -3,9 +3,9 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>HDQM Web Inteface</title>
   <style type="text/css" title="currentStyle">
-    @import "/lxplusUser/lib/media/css/demo_page.css";
+    @import "/lxplusUser/lib/dataTables/media/css/demo_page.css";
     @import "css/dropdown.css";
-    @import "/lxplusUser/lib/media/css/demo_table_jui.css";
+    @import "/lxplusUser/lib/dataTables/media/css/demo_table_jui.css";
 		</style>
   <style>
     #dt_example{
@@ -13,15 +13,15 @@
     }
   </style>
 <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/smoothness/jquery-ui.css" type="text/css" />
-    <!-- @import "/lxplusUser/lib/media/prettyPhoto/prettyPhoto/css/prettyPhoto.css"; -->
+    <!-- @import "/lxplusUser/lib/dataTables/media/prettyPhoto/prettyPhoto/css/prettyPhoto.css"; -->
   </style>
-  <script type="text/javascript" src="/lxplusUser/lib/media/jquery-1.4.2.min.js"></script>
+  <script type="text/javascript" src="/lxplusUser/lib/jquery.js"></script>
   <script type="text/javascript" src="/lxplusUser/lib/jquery.blockUI.js"></script>
 
-  <!-- <script type="text/javascript" src="/lxplusUser/lib/media/prettyPhoto/jquery.prettyPhoto.js"></script> -->
+  <!-- <script type="text/javascript" src="/lxplusUser/lib/dataTables/media/prettyPhoto/jquery.prettyPhoto.js"></script> -->
 
-  <!-- <script type="text/javascript" src="/lxplusUser/lib/media/jquery.js"></script> -->
-  <script type="text/javascript" src="/lxplusUser/lib/media/jquery.dataTables.js"></script>
+  <!-- <script type="text/javascript" src="/lxplusUser/lib/dataTables/media/jquery.js"></script> -->
+  <script type="text/javascript" src="/lxplusUser/lib/dataTables/media/js/jquery.dataTables.js"></script>
   <script type="text/javascript" src="functions.js"></script>
   <script type="text/javascript" charset="utf-8">
 
@@ -108,7 +108,7 @@
       "iDesplayLength": 100,
       "bProcessing": true,
 	  "bServerSide":false,
-      //<!-- "sAjaxSource": '/media/json_source.txt', -->
+      //<!-- "sAjaxSource": '/dataTables/media/json_source.txt', -->
      // "sAjaxSource": ''+typeName+'FullList.txt',
 	 // "sAjaxSource": "../examples_support/server_processing_id.php",
       "bStateSave": true, <!-- save the state using cookies -->
