--- a/DQMServices/Diagnostic/web-interface/WebInterface.html
+++ b/DQMServices/Diagnostic/web-interface/WebInterface.html
@@ -3,9 +3,9 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>HDQM Web Inteface</title>
   <style type="text/css" title="currentStyle">
-    @import "/lxplusUser/lib/dataTables/media/css/demo_page.css";
+    @import "/pierro/lib/dataTables/media/css/demo_page.css";
     @import "css/dropdown.css";
-    @import "/lxplusUser/lib/dataTables/media/css/demo_table_jui.css";
+    @import "/pierro/lib/dataTables/media/css/demo_table_jui.css";
 		</style>
   <style>
     #dt_example{
@@ -13,15 +13,15 @@
     }
   </style>
 <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/smoothness/jquery-ui.css" type="text/css" />
-    <!-- @import "/lxplusUser/lib/dataTables/media/prettyPhoto/prettyPhoto/css/prettyPhoto.css"; -->
+    <!-- @import "/pierro/lib/dataTables/media/prettyPhoto/prettyPhoto/css/prettyPhoto.css"; -->
   </style>
-  <script type="text/javascript" src="/lxplusUser/lib/jquery.js"></script>
-  <script type="text/javascript" src="/lxplusUser/lib/jquery.blockUI.js"></script>
+  <script type="text/javascript" src="/pierro/lib/jquery.js"></script>
+  <script type="text/javascript" src="/pierro/lib/jquery.blockUI.js"></script>
 
-  <!-- <script type="text/javascript" src="/lxplusUser/lib/dataTables/media/prettyPhoto/jquery.prettyPhoto.js"></script> -->
+  <!-- <script type="text/javascript" src="/pierro/lib/dataTables/media/prettyPhoto/jquery.prettyPhoto.js"></script> -->
 
-  <!-- <script type="text/javascript" src="/lxplusUser/lib/dataTables/media/jquery.js"></script> -->
-  <script type="text/javascript" src="/lxplusUser/lib/dataTables/media/js/jquery.dataTables.js"></script>
+  <!-- <script type="text/javascript" src="/pierro/lib/dataTables/media/jquery.js"></script> -->
+  <script type="text/javascript" src="/pierro/lib/dataTables/media/js/jquery.dataTables.js"></script>
   <script type="text/javascript" src="functions.js"></script>
   <script type="text/javascript" charset="utf-8">
 
@@ -38,6 +38,7 @@
 		typeName = getUrlVars()["subDet"];
 		var tagVersion = getUrlVars()['subDet'];
 		var tagName = "HDQM_"+typeName+"_"+tagVersion;
+
 		
 		
 		$("#form").submit(function() 
@@ -104,12 +105,14 @@
 
     $('#subDet').html("HDQM Web Interface for " + typeName);
 
+
+    //alert(typeName+'FullList.txt');
     oTable = $('#example').dataTable( {
       "iDesplayLength": 100,
       "bProcessing": true,
 	  "bServerSide":false,
       //<!-- "sAjaxSource": '/dataTables/media/json_source.txt', -->
-     // "sAjaxSource": ''+typeName+'FullList.txt',
+     "sAjaxSource": typeName+'FullList.txt',
 	 // "sAjaxSource": "../examples_support/server_processing_id.php",
       "bStateSave": true, <!-- save the state using cookies -->
       "bJQueryUI": true,
