fix number of columns

--- a/DQMServices/Diagnostic/web-interface/WebInterface.html
+++ b/DQMServices/Diagnostic/web-interface/WebInterface.html
@@ -146,8 +146,7 @@
       "aoColumns": [
         null,
 		{"sClass": "center"},
-        {"sClass": "center"},
-       null
+        {"sClass": "center"}
 
 		
       ]
