--- a/Validation/RecoEgamma/test/validationPlotsTemplate.html
+++ b/Validation/RecoEgamma/test/validationPlotsTemplate.html
@@ -153,7 +153,7 @@ The distribution  is obtained for |&eta| &lt 2.5
 <td align=center valign=top >
 <A HREF="gifs/eResunconvBarrel.gif"><IMG  SRC="gifs/eResunconvBarrel.gif" width=100%></A>
 <br><FONT SIZE=-1>Reconstructed photon matching a simulated photon: Photon energy resolution defined as the ratio between reconstructed and simulated energy. 
-The distribution is made only for photons with R9 above the default value of 0.93 (i.e. unconverted photons according to ECAL).
+The distribution is made only for photons with R9 above the default value of 0.93 (i.e. converted photons according to ECAL).
 The distribution is for ecal barrel only.
 </font>  
 </td>
@@ -324,6 +324,33 @@ for Endcap only
 </font>  
 </td>
 </tr>
+
+
+<table border=4 cellspacing=10 WIDTH=100%>
+<tr>
+<td align=center valign=top >
+<A HREF="gifs/pEResVsEtaAll.gif"><IMG  SRC="gifs/pEResVsEtaAll.gif" width=100%></A>
+<br><FONT SIZE=-1>Reconstructed photon matching a simulated photon: 
+Photon energy resolution defined as the ratio between reconstructed and simulated energy vs photon true &eta
+
+</font>  
+</td>
+<td align=center valign=top >
+<A HREF="gifs/pEResVsEtaUnconv.gif"><IMG  SRC="gifs/pEResVsEtaUnconv.gif" width=100%></A>
+<br><FONT SIZE=-1>Reconstructed photon matching a simulated photon: 
+Photon energy resolution defined as the ratio between reconstructed and simulated energy vs  photon true &eta
+The distribution is made only for photons with R9 greater the default value of 0.93 (i.e. unconverted photons according to ECAL).
+</font>  
+</td>
+<td align=center valign=top >
+<A HREF="gifs/pEResVsEtaConv.gif"><IMG  SRC="gifs/pEResVsEtaConv.gif" width=100%></A>
+<br><FONT SIZE=-1>Reconstructed photon matching a simulated photon: 
+Photon energy resolution defined as the ratio between reconstructed and simulated energy vs photon true &eta
+The distribution is made only for photons with R9 smaller the default value of 0.93 (i.e. converted photons according to ECAL).
+</font>  
+</td>
+</tr>
+
 
 
 <table border=4 cellspacing=10 WIDTH=100%>
