Add plot for vertex resolution

--- a/Validation/RecoEgamma/test/validationPlotsTemplate.html
+++ b/Validation/RecoEgamma/test/validationPlotsTemplate.html
@@ -848,6 +848,97 @@ and valid vertex fit divided by the number of conversions with two tracks.
 <table border=4 cellspacing=10 WIDTH=100%>
 <tr>
 <td align=center valign=top >
+<A HREF="gifs/convVtxdR.gif"><IMG  SRC="gifs/convVtxdR.gif" width=100%></A>
+<br><FONT SIZE=-1>Fitted vertex radius resolution: all ecal
+</font>  
+</td>
+<td align=center valign=top >
+<A HREF="gifs/convVtxdR_barrel.gif"><IMG  SRC="gifs/convVtxdR_barrel.gif" width=100%></A>
+<br><FONT SIZE=-1>>Fitted vertex radius resolution:  |&eta| &lt 1.2
+</font>  
+</td>
+<td align=center valign=top >
+<A HREF="gifs/convVtxdR_edncap.gif"><IMG  SRC="gifs/convVtxdR_edncap.gif" width=100%></A>
+<br><FONT SIZE=-1>>Fitted vertex radius resolution:  |&eta| &gt 1.2
+</font>  
+</td>
+</tr>
+</table>
+
+
+
+<table border=4 cellspacing=10 WIDTH=100%>
+<tr>
+<td align=center valign=top >
+<A HREF="gifs/convVtxdZ.gif"><IMG  SRC="gifs/convVtxdZ.gif" width=100%></A>
+<br><FONT SIZE=-1>Fitted vertex Z resolution: all ecal
+</font>  
+</td>
+<td align=center valign=top >
+<A HREF="gifs/convVtxdZ_barrel.gif"><IMG  SRC="gifs/convVtxdZ_barrel.gif" width=100%></A>
+<br><FONT SIZE=-1>>Fitted vertex Z resolution:  |&eta| &lt 1.2
+</font>  
+</td>
+<td align=center valign=top >
+<A HREF="gifs/convVtxdZ_endcap.gif"><IMG  SRC="gifs/convVtxdZ_endcap.gif" width=100%></A>
+<br><FONT SIZE=-1>>Fitted vertex Z resolution:  |&eta| &gt 1.2
+</font>  
+</td>
+</tr>
+</table>
+
+
+
+
+<table border=4 cellspacing=10 WIDTH=100%>
+<tr>
+<td align=center valign=top >
+<A HREF="gifs/convVtxdX.gif"><IMG  SRC="gifs/convVtxdX.gif" width=100%></A>
+<br><FONT SIZE=-1>Fitted vertex X resolution: all ecal
+</font>  
+</td>
+<td align=center valign=top >
+<A HREF="gifs/convVtxdX_barrel.gif"><IMG  SRC="gifs/convVtxdX_barrel.gif" width=100%></A>
+<br><FONT SIZE=-1>>Fitted vertex X resolution:  |&eta| &lt 1.2
+</font>  
+</td>
+<td align=center valign=top >
+<A HREF="gifs/convVtxdX_endcap.gif"><IMG  SRC="gifs/convVtxdX_endcap.gif" width=100%></A>
+<br><FONT SIZE=-1>>Fitted vertex X resolution:  |&eta| &gt 1.2
+</font>  
+</td>
+</tr>
+</table>
+
+
+
+<table border=4 cellspacing=10 WIDTH=100%>
+<tr>
+<td align=center valign=top >
+<A HREF="gifs/convVtxdY.gif"><IMG  SRC="gifs/convVtxdY.gif" width=100%></A>
+<br><FONT SIZE=-1>Fitted vertex Y resolution: all ecal
+</font>  
+</td>
+<td align=center valign=top >
+<A HREF="gifs/convVtxdY_barrel.gif"><IMG  SRC="gifs/convVtxdY_barrel.gif" width=100%></A>
+<br><FONT SIZE=-1>>Fitted vertex Y resolution:  |&eta| &lt 1.2
+</font>  
+</td>
+<td align=center valign=top >
+<A HREF="gifs/convVtxdY_endcap.gif"><IMG  SRC="gifs/convVtxdY_endcap.gif" width=100%></A>
+<br><FONT SIZE=-1>>Fitted vertex Y resolution:  |&eta| &gt 1.2
+</font>  
+</td>
+</tr>
+</table>
+
+
+
+
+
+<table border=4 cellspacing=10 WIDTH=100%>
+<tr>
+<td align=center valign=top >
 <A HREF="gifs/mvaOutAll.gif"><IMG  SRC="gifs/mvaOutAll.gif" width=100%></A>
 <br><FONT SIZE=-1>MVA output: all ecal
 </font>  
