--- a/Validation/RecoEgamma/test/validationPlotsTemplate.html
+++ b/Validation/RecoEgamma/test/validationPlotsTemplate.html
@@ -858,7 +858,7 @@ and valid vertex fit divided by the number of conversions with two tracks.
 </font>  
 </td>
 <td align=center valign=top >
-<A HREF="gifs/convVtxdR_edncap.gif"><IMG  SRC="gifs/convVtxdR_edncap.gif" width=100%></A>
+<A HREF="gifs/convVtxdR_endcap.gif"><IMG  SRC="gifs/convVtxdR_endcap.gif" width=100%></A>
 <br><FONT SIZE=-1>>Fitted vertex radius resolution:  |&eta| &gt 1.2
 </font>  
 </td>
